# CanStuff

can_reader/: CMakeLists.txt  package.xml
can_reader/launch/: can_reader.launch
can_reader/msg/: CanData.msg  CanData2.msg
can_reader/src/: can_reader_node.cpp
can_sniffer/: CMakeLists.txt  package.xml
can_sniffer/config/: all_ids.txt  can_excluded.xml  inspected_variables.xml  inspected_variables_template.xml  inspected_variables_zoe2016.xml
can_sniffer/launch/: can_sniffer.launch
can_sniffer/msg/: BitMaskData.msg  CanMsgId.msg  CanMsgIdList.msg  CanMsgVariable.msg  CanVariableData.msg  OnOffMsg.msg  VarData.msg
can_sniffer/src/: can_sniffer.cpp  can_sniffer.h  can_sniffer_node.cpp
can_sniffer/srv/: GetVarList.srv
can_sniffer/www_CAN_analyzer/: index.html
can_sniffer/www_CAN_analyzer/css/: style.css
can_sniffer/www_CAN_analyzer/js/: connection.js  plot_config.js
scripts/: check_slcan.sh  slcan.sh
