<?xml version="1.0"?>
<package>
  <name>can_reader</name>
  <version>0.0.0</version>
  <description>The can_reader package</description>

  <maintainer email="salvador.dominguez@sagarobotics.com">salvador</maintainer>

  <license>TODO</license>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>thorvald_base</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>thorvald_base</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!--<metapackage/>-->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
